# COMP398.2024.2

./: .clang-format
revisao_c/: CMakeLists.txt  prj.conf
revisao_c/include/: greetings.h
revisao_c/src/: greetings.c  main.c
smartqueue/: CMakeLists.txt  Kconfig  justfile
smartqueue/include/: button.h  calc.h  led.h
smartqueue/src/: button.c  calc.c  led.c  main.c
smartqueue/tests/calculator/: CMakeLists.txt  prj.conf  testcase.yaml
smartqueue/tests/calculator/src/: main.c
